# face_recognition

./: AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
unit_test_ai/: test_face_register_qdrant.py  test_insightface_realtime.py  verify_gpu.py
